--- a/templates/write.html
+++ b/templates/write.html
@@ -65,7 +65,7 @@
                 <label class="btn btn-outline-primary" for="annoyed">짜증남</label>
             </div>            
         </div>
-        <div class="row mb-3">
+        <div class="row mb-3 my-2">
             <div class="col-auto">
               <input class="btn-check" type="radio" name="mood" id="depression" value="depression">
               <label class="btn btn-outline-primary" for="depression">우울함</label>
